# docs/swagger.json
@@ -38,7 +38,7 @@
                         "JWTAuth": []
                     }
                 ],
-                "description": "login app",
+                "description": "List user",
                 "consumes": [
                     "application/json"
                 ],
@@ -48,7 +48,7 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "GetList User",
+                "summary": "Get List User",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -115,6 +115,43 @@
                         "schema": {
                             "$ref": "#/definitions/user.RegisterValidator"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ResponseModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/{uuid}": {
+            "get": {
+                "security": [
+                    {
+                        "JWTAuth": []
+                    }
+                ],
+                "description": "Detail user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get Detail User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
